2005-06-02  Alex Roitman  <shura@gramps-project.org>
	* src/ListModel.py: Check for the list to be long enough.
	* src/gramps.glade: Replace ComboBox with ComboBoxEntry; remove
	unneeded scrollwed window (caused warning).
	* src/RelLib.py (Family.set_relationship): Update doc string.

2005-06-01  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: Start event_ref integration
	* src/EventEdit.py: Start event_ref integration
	* src/ListModel.py: Start event_ref integration
	* src/PersonModel.py: Start event_ref integration
	* src/ListBox.py: Start event_ref integration
	* src/gramps.glade: 

2005-06-01  Alex Roitman  <shura@gramps-project.org>
	* src/AutoComp.py (StandardCustomSelector): Provide an option to
	use an existing ComboBoxEntry instance; add set_values method.
	* src/RelLib.py (Family.__init__): Use tuple for type.
	* src/Utils.py: Add event_roles mapping.
	* src/AddSpouse.py, src/EditPerson.py, src/FamilyView.py,
	src/ListBox.py, src/Marriage.py, src/NameEdit.py: Support tuple
	types.
	* src/gramps.glade: Replace ComboBox with ComboBoxEntry; add icons.

	* various: More support for event refs.

2005-05-31  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/EditSource.py, src/ListBox.py, src/ReadGedcom.py,
	src/WriteGedcom.py: Constants moved from const to Utils and RelLib

2005-05-31  Alex Roitman  <shura@gramps-project.org>
	* src/AutoComp.py (StandardCustomSelector): Add class to handle
	(int,str) selections including custom strings.
	* src/RelLib.py (Witness): Remove class, as it is obsoleted by the
	EventRef class.

	* src/AutoComp.py (StandardCustomSelector): Add autocompletion.

2005-05-30  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib.py: Move constants back to RelLib, as class attributes.
	* src/Utils.py: Move constant mappings from const.py.in.
	* src/const.py.in: Move constants and mappings elsewhere.
	* various: Use constants from RelLib, not const.

	* src/RelLib.py: Fix (int,str) types.
